module/vpc/private_subnet.tf
resource "aws_subnet" "private" {
  count = local.az_count * local.private_subnet_per_az_size
  cidr_block = cidrsubnet(local.private_subnet_cidr_prefix, 2, count.index)

  vpc_id = aws_vpc.vpc.id
  availability_zone = element(data.aws_availability_zones.available.names, count.index % local.az_count)

  tags = {
    Name = "${local.vpc_name}-private-${count.index + 1}"
    VpcName = local.vpc_name
  }
}
