module/vpc/public_subnet.tf
resource "aws_subnet" "public" {
  count = local.az_count * local.public_subnet_per_az_size
  cidr_block = cidrsubnet(local.public_subnet_cidr_prefix, 2, count.index)

  vpc_id = aws_vpc.vpc.id
  availability_zone = element(data.aws_availability_zones.available.names, count.index % local.az_count)

  tags = {
    Name = "${local.vpc_name}-public-${count.index + 1}"
    VpcName = local.vpc_name
  }
}
